# IDA-Type-Libraries

./: CMakeLists.txt  README.md
STL/: CMakeLists.txt
STL/GNU/: CMakeLists.txt  gnuc++.h
STL/GNU/src/usr_include/linux/: version.h
STL/GNU/src/usr_include/x86_64-linux-gnu/c++/9/32/bits/: c++config.h
STL/GNU/src/usr_include/x86_64-linux-gnu/c++/9/x32/bits/: c++config.h
STL/GNU/src/usr_lib_gcc/x86_64-linux-gnu/9/: collect2  liblto_plugin.so.0.0.0  lto-wrapper
STL/GNU/src/usr_lib_gcc/x86_64-linux-gnu/9/include/: omp.h
STL/GNU/src/usr_lib_gcc/x86_64-linux-gnu/9/plugin/: libcc1plugin.so.0.0.0  libcp1plugin.so.0.0.0
STL/microsoft/: CMakeLists.txt  msstl.h
STL/microsoft/src/: Makefile  msstl.h
